<resources>
    <string name="app_name">DailyBucket</string>
    <string name="login">Log In</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password1">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="profilepic">Chose profile picture</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="title_activity_side_menu">SideMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tasks">Tasks</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="logout">LogOut</string>
</resources>